--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,9 +9,13 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_slidable: ^1.3.0
   get: ^4.6.1
+  get_storage: ^2.0.3
   hive: ^2.2.1
+  hive_flutter: ^1.1.0
+  
+  objectbox: ^1.6.0
+  path_provider: ^2.0.11
   provider: ^6.0.2
 
 
@@ -19,6 +23,8 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.1
+  hive_generator: ^1.1.3
+  build_runner: ^2.2.0
 
 flutter:
   uses-material-design: true
