--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   get_storage: ^2.0.3
   hive: ^2.2.1
   hive_flutter: ^1.1.0
+  lzstring: ^2.0.0+2
   objectbox: ^1.6.0
   #---------------
 
